# BaselineINT4Dequant

./: README.md
HLSFlow-main/Applications/: CMakeLists.txt
cmod/: CMakeLists.txt  cmd
cmod/BaselineINT4Dequant/: BaselineINT4Dequant.h  CMakeLists.txt  INT4Vector.txt  INT4VectorGold.txt  testbench.cpp
